# inventory-system

./: .env  .env.example  CSV_IMPORT_SPEC.md  GIT_REPO.md  INVENTORY_API_2.0_DETAIL_EXAMPLE.md  ITEM_API_2.0_DETAIL_EXAMPLE.md  PROGRESS.md  RAKUTEN_API_KNOWLEDGE_BASE.md  RAKUTEN_PAY_ORDER_API.md  README.md  SKU_SYNC_ISSUES.md  SPEC.md  TASKS.md  check_rakuten_config.py  debug_rakuten_api.py  fix_rakuten_config.py  inventory.db  opencode.json  package-lock.json  package_副本.json  pyproject.toml  test_api.sh  test_confirm.csv  test_full_mock_api.sh  test_real_sku_sync.sh  全部.csv  平时.csv  未命名.txt
alembic/: env.py
app/: main.py
app/api/: routes.py
app/core/: config.py  validate.py
app/db/: models.py  schemas.py
app/services/: csv_import.py  inventory.py  inventory_sync.py  order_polling.py  rakuten_api.py  sku_sync.py
app/static/: index.html
inventory_sync_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_core.py  test_integration_simple.py  test_sku_sync.py
